--- a/AKHONA/index.html
+++ b/AKHONA/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> my portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="main">
-        <div class="navbar">
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">PORTFOLIO</a></li>
-                <li><a href="#">SERVICE</a></li>
-                <li><a href="#">HIRE ME</a></li>
-            </ul>
-        </div>
-        <div class="info">
-            <h1> HI, I'm <span> Akhona zwide</span>.</h1>
-            <h1><span> S</span>OF<span>T</span>WARE DEVELOPER</h1>
-            <h>This is my official portfolio website to show all</h3>
-            details and work experience in software developer.</div>
-            <a href="#">HIRE ME</a>
-        </div>
-        <div class="1mage">
-            <img src="/img3.png"class="girl">
+        <title> MY portfolio</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
 
+        <div class="main">
+            <div class="navbar">
+
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT </a></li>
+                    <li><a href="#">PORTFOLIO</a></li>
+                    <li><a href="#">CONTACT ME</a></li>
+                </ul>
+            </div>
+
+            <div class="info">
+                <h1>Hi, i'm <span>Akhona Zwide.</span></h3>
+                <h1><span>Soft</span>ware<span><span>developer.</span></h1>
+                <h2>Thi is my portfolio website to show all details and work experience in software developer.</h2>
+                <a href="#"> view cv</a>
+            
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
 
 
