--- a/Akhona Zwide/index.html
+++ b/Akhona Zwide/index.html
@@ -7,25 +7,23 @@
     </head>
     <body>
 
-        <div class="navbar">
-            <div class="navbar">
+        <div class="nav-bar" style="margin-top: 10px;">
+            <a href="index.html" class="nav-link">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="about.html" class="nav-link">About</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="portfolio.html" class="nav-link">Portfolio</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="portfolio.html" class="nav-link">Contact</a>
 
+        </div>
 
-                <ul>
-                    <a href="index.html">HOME</a>
-                    <a href="about.html">ABOUT</a>
-                    <a href="portfolio.html">PORTFOLIO</a>
-                    <a href="contact.html">CONTACT</a>
-                </ul>
-            </div>
-        </nav>
+   
+           
             <div class="info">
                 <h1>Hi, I'm <span> AKHONA ZWIDE</span></h1>
                 <h1 style="font-size: 40px;">SOFTWARE DEVELOPMENT</h1>
                 <p>This is my official Portfolio website to show all Details and work experinces in software development.</p>
                 <a href="/Akhona's Cv.pdf">view cv</a>
             </div>
-        </div>
+       
 
         <div class="links">
             <a href="#"><i class='bx bxl-facebook'></i></a>
